--- a/mkimage.conf
+++ b/mkimage.conf
@@ -1,10 +1,14 @@
 PRIVKEY=swupdate.key
-UBOOT=""
-UBOOT_VERSION=""
+UBOOT="flash.bin"
+UBOOT_VERSION="2020.04-00039-g6727afc1a744"
+#UBOOT_VERSION="imx_5.4.70_er4-39-g6727afc1a744"
 UBOOT_SIZE="4M"
 BOOT_FILES=""
 KERNEL_VERSION=""
 BASE_OS=""
 BASE_OS_VERSION=""
 EXTRA_OS=""
-PRE_SCRIPTS="atmark_swupdate_pre.sh"
+PRE_SCRIPTS=""
+POST_SCRIPTS=""
+UPDATE_CONTAINERS=""
+EMBED_CONTAINERS=""
