swupdate gen-image: assign component/version to all files, cleanup

--- a/mkimage.conf
+++ b/mkimage.conf
@@ -1,14 +1,13 @@
 PRIVKEY=swupdate.key
 UBOOT="flash.bin"
 UBOOT_VERSION="2020.04-00039-g6727afc1a744"
-#UBOOT_VERSION="imx_5.4.70_er4-39-g6727afc1a744"
 UBOOT_SIZE="4M"
 BOOT_FILES=""
 KERNEL_VERSION=""
 BASE_OS=""
 BASE_OS_VERSION=""
-EXTRA_OS=""
-PRE_SCRIPTS=""
-POST_SCRIPTS=""
-UPDATE_CONTAINERS=""
+EXTRA_TARS=""
+EXTRA_SCRIPTS=""
 EMBED_CONTAINERS=""
+DEBUG_SWDESC=""
+FORCE=
