--- a/mkimage.conf
+++ b/mkimage.conf
@@ -1,4 +1,5 @@
 PRIVKEY=swupdate.key
+ENCRYPT_KEYFILE=""
 UBOOT="flash.bin"
 UBOOT_VERSION="2020.04-00039-g6727afc1a744"
 UBOOT_SIZE="4M"
@@ -9,5 +10,7 @@ BASE_OS_VERSION=""
 EXTRA_TARS=""
 EXTRA_SCRIPTS=""
 EMBED_CONTAINERS=""
+USB_CONTAINERS=""
+PULL_CONTAINERS=""
 DEBUG_SWDESC=""
 FORCE=
