mkimage: autoset uboot version unless forced

--- a/mkimage.conf
+++ b/mkimage.conf
@@ -1,8 +1,8 @@
 PRIVKEY=swupdate.key
 PRIVKEY_PASS=""
 ENCRYPT_KEYFILE=""
-UBOOT="flash.bin"
-UBOOT_VERSION="2020.04-00039-g6727afc1a744"
+UBOOT="imx-boot_yakushima-eva"
+UBOOT_VERSION=""
 UBOOT_SIZE="4M"
 BOOT_FILES=""
 KERNEL_VERSION=""
