hardware-compat: add HW_COMPAT variable

--- a/mkimage.conf
+++ b/mkimage.conf
@@ -2,6 +2,7 @@ PRIVKEY=swupdate.key
 PRIVKEY_PASS=""
 PUBKEY=swupdate.pem
 ENCRYPT_KEYFILE=""
+#HW_COMPAT="yakushima-1.0"
 UBOOT="imx-boot_yakushima-eva"
 UBOOT_VERSION=""
 UBOOT_SIZE="4M"
