--- a/examples/embed_container_nginx.conf
+++ b/examples/embed_container_nginx.conf
@@ -2,8 +2,7 @@ PRIVKEY=swupdate.key
 PUBKEY=swupdate.pem
 # generated with the following:
 # $ podman pull docker.io/arm64v8/nginx:alpine
-# $ podman save -o examples/nginx_alpine.tar docker.io/arm64v8/nginx:alpine
-# XXX needs fixing:  this saves image as docker.io/arm64v8/nginx:alpine but nginx_start expects docker.io/library/nginx:alpine
+# $ ./podman_partial_image.sh -R s@docker.io/arm64v8/nginx@docker.io/nginx@g -o examples/nginx_alpine.tar docker.io/arm64v8/nginx:alpine
 EMBED_CONTAINERS="container_nginx 1 examples/nginx_alpine.tar"
 # $ tar -C examples/nginx_start -cf examples/nginx_start.tar .
 EXTRA_TARS="extra_os 1 examples/nginx_start.tar"
