split mkimage.conf to always load it by default
this make more sense for users

--- a/mkimage.conf
+++ b/mkimage.conf
@@ -1,19 +1,21 @@
+# This file is read even if another config file is passed in argument,
+# and is meant to define default values for image generation (e.g. key files)
+# Use --no-default if you want to skip loading it.
+
+# public and private key locations for signing purpose, mandatory.
 PRIVKEY=swupdate.key
-PRIVKEY_PASS=""
 PUBKEY=swupdate.pem
-ENCRYPT_KEYFILE=""
-#HW_COMPAT="yakushima-1.0"
-UBOOT="imx-boot_yakushima-eva"
-UBOOT_VERSION=""
-UBOOT_SIZE="4M"
-BOOT_FILES=""
-KERNEL_VERSION=""
-BASE_OS=""
-BASE_OS_VERSION=""
-EXTRA_TARS=""
-EXTRA_SCRIPTS=""
-EMBED_CONTAINERS=""
-USB_CONTAINERS=""
-PULL_CONTAINERS=""
-DEBUG_SWDESC=""
-FORCE=
+
+# private key password, if set. defaults to prompting for password.
+# Note that this is not safe if you store the key and its password
+# in the same place!
+# PRIVKEY_PASS=""
+
+# AES encryption key if set
+# ENCRYPT_KEYFILE="swupdate.aes-key"
+
+# swupdate hwrevision compatibility tag. Note that if you change it on the device,
+# you might no longer be able to install atmark updates.
+# See documentation for help if you require changing it:
+# https://sbabic.github.io/swupdate/sw-description.html#hardware-compatibility
+HW_COMPAT="yakushima-1.0"
