--- a/examples/custom_script.conf
+++ b/examples/custom_script.conf
@@ -8,5 +8,5 @@
 
 # script will not be chrooted, OS manipulations happen in /target/<path>
 
-EXTRA_SCRIPTS="extra_os 1 examples/test_script.sh"
-#EXTRA_SCRIPTS="custom 1 examples/test_script_app.sh"
+#EXTRA_SCRIPTS="extra_os 1 examples/custom_script_rootfs.sh"
+EXTRA_SCRIPTS="custom 1 examples/custom_script_app.sh"
