--- a/examples/kernel_update_apk.conf
+++ b/examples/kernel_update_apk.conf
@@ -1,1 +1,9 @@
-# XXX TBD need new variable for installed directly script command
+# Actually works with any APK...
+# Careful that it will try to resolve any missing dependency through internet
+# if package cannot be installed directly.
+# Network will not be used if dependencies are satisfied.
+EXTRA_EXECS="extra_os 1 examples/linux-at-5.10.9-r3.apk -- apk add --root /target"
+
+# it's also possible to have a whole update via internet
+[ -e examples/apk-add ] || : > examples/apk-add
+#EXTRA_EXECS="extra_os 1 examples/apk-add -- apk update --root /target && apk add --root /target linux-at #"
