examples/enable_sshd: also generate server keys

--- a/examples/enable_sshd.conf
+++ b/examples/enable_sshd.conf
@@ -1,3 +1,4 @@
 # add your public key in examples/enable_sshd/root/.ssh/authorized_keys and
 # $ tar -C examples/enable_sshd -cf examples/enable_sshd.tar .
 EXTRA_TARS="extra_os 1 examples/enable_sshd.tar"
+EXTRA_SCRIPTS="extra_os 1 examples/enable_sshd_genkeys.sh"
