examples/kernel_update_plain: fix files need to be separated by new line

--- a/examples/kernel_update_plain.conf
+++ b/examples/kernel_update_plain.conf
@@ -1,5 +1,6 @@
 # write over files in /boot
 # any different version from current system's (based on sw-versions)
 # will be installed
-BOOT_FILES="Image imx8mp-yakushima-eva.dtb"
+BOOT_FILES="Image
+imx8mp-yakushima-eva.dtb"
 KERNEL_VERSION="5.10.0-1"
