cleanup: move examples test to tests/, outputs to tests/out

--- a/examples/kernel_update_apk.conf
+++ b/examples/kernel_update_apk.conf
@@ -5,5 +5,5 @@
 EXTRA_EXECS="extra_os 1 examples/linux-at-5.10.9-r3.apk -- apk add --root /target"
 
 # it's also possible to have a whole update via internet
-[ -e examples/apk-add ] || : > examples/apk-add
+#[ -e examples/apk-add ] || : > examples/apk-add
 #EXTRA_EXECS="extra_os 1 examples/apk-add -- apk update --root /target && apk add --root /target linux-at #"
