BREAKING CHANGE: replace UBOOT variable by swdesc_uboot helper
this is the first of a series of conversions from setting variables to
incrementally building sw-description directly in configs

Doing so will make the configuration more declarative and allow building
images targetting different boards, as well as making specifying component
versions more natural

--- a/examples/OS_update.conf
+++ b/examples/OS_update.conf
@@ -1,7 +1,7 @@
 # uboot image can be genrated with atmark imx-boot script
 # and will be written in /dev/mmcblkXbootY or in the bootloader
 # position of sd card
-UBOOT=imx-boot_yakushima-eva
+swdesc_uboot imx-boot_yakushima-eva
 
 # base OS is a tar that will be extracted on a blank filesystem,
 # after copying just a few key config files. see scripts/pre_rootfs.sh
