BREAKING CHANGE: replace BASE_OS, BOOT_FILES and EXTRA_TARS by swdesc_tar and swdesc_files

--- a/examples/OS_update.conf
+++ b/examples/OS_update.conf
@@ -5,7 +5,7 @@ swdesc_uboot imx-boot_yakushima-eva
 
 # base OS is a tar that will be extracted on a blank filesystem,
 # after copying just a few key config files. see scripts/pre_rootfs.sh
-BASE_OS="alpine-aarch64-20210622.tar.zst"
+#
 # OS updates are only installed if version is greater than previous update
 # so if you install your own updates atmark updates might not get installed
-BASE_OS_VERSION="20210622"
+swdesc_tar "alpine-aarch64-20210622.tar.zst" base_os 20210622
