--- a/examples/usb_container_nginx.conf
+++ b/examples/usb_container_nginx.conf
@@ -3,4 +3,4 @@
 # $ ./podman_partial_image.sh -R s@docker.io/arm64v8/nginx@docker.io/nginx@g -o examples/nginx_alpine.tar docker.io/arm64v8/nginx:alpine
 USB_CONTAINERS="container_nginx 1 examples/nginx_alpine.tar"
 # $ tar -C examples/nginx_start -cf examples/nginx_start.tar .
-EXTRA_TARS="extra_os 1 examples/nginx_start.tar"
+swdesc_tar examples/nginx_start.tar extra_os 1
