--- a/tests/spaces.conf
+++ b/tests/spaces.conf
@@ -1,7 +1,7 @@
 DEBUG_SWDESC="# ATMARK_SKIP_SCRIPTS"
 touch tests/zoo/test\ space
 tar -C tests/zoo -cf tests/zoo/test\ space.tar test\ space
-EXTRA_TARS="spaces 1 tests/zoo/test space.tar"
+swdesc_tar "tests/zoo/test space.tar" extra_os 1 /tmp
 PULL_CONTAINERS="spaces 1 docker.io/tag with spaces"
 EMBED_CONTAINERS="spaces 1 tests/zoo/test space.tar"
 USB_CONTAINERS="spaces 1 tests/zoo/test space.tar"
