--- a/examples/kernel_update_plain.conf
+++ b/examples/kernel_update_plain.conf
@@ -1,6 +1,5 @@
 # write over files in /boot
 # any different version from current system's (based on sw-versions)
 # will be installed
-BOOT_FILES="examples/Image
-examples/imx8mp-yakushima-eva.dtb"
-KERNEL_VERSION="5.10.0-1"
+swdesc_files boot kernel 5.10.0-1 /boot "examples/Image" \
+	"examples/imx8mp-yakushima-eva.dtb"
