--- a/examples/pull_container_nginx.conf
+++ b/examples/pull_container_nginx.conf
@@ -1,3 +1,3 @@
 PULL_CONTAINERS="container_nginx 1 docker.io/nginx:alpine"
 # $ tar -C examples/nginx_start -cf examples/nginx_start.tar .
-EXTRA_TARS="extra_os 1 examples/nginx_start.tar"
+swdesc_tar examples/nginx_start.tar extra_os 1
