BREAKING CHANGE: replace EXTRA_SCRIPTS by swdesc_script

--- a/examples/custom_script.conf
+++ b/examples/custom_script.conf
@@ -8,5 +8,5 @@
 
 # script will not be chrooted, OS manipulations happen in /target/<path>
 
-#EXTRA_SCRIPTS="extra_os 1 examples/custom_script_rootfs.sh"
-EXTRA_SCRIPTS="custom 1 examples/custom_script_app.sh"
+#swdesc_script examples/custom_script_rootfs.sh extra_os 1
+swdesc_script examples/custom_script_app.sh custom 1
