--- a/tests/spaces.conf
+++ b/tests/spaces.conf
@@ -5,5 +5,5 @@ swdesc_tar "tests/zoo/test space.tar" extra_os 1 /tmp
 PULL_CONTAINERS="spaces 1 docker.io/tag with spaces"
 EMBED_CONTAINERS="spaces 1 tests/zoo/test space.tar"
 USB_CONTAINERS="spaces 1 tests/zoo/test space.tar"
-EXTRA_SCRIPTS="spaces 1 tests/zoo/test space"
+swdesc_script "tests/zoo/test space" spaces 1
 EXTRA_EXECS="spaces 1 tests/zoo/test space -- echo"
