--- a/examples/enable_sshd.conf
+++ b/examples/enable_sshd.conf
@@ -1,4 +1,4 @@
 # add your public key in examples/enable_sshd/root/.ssh/authorized_keys and
 # $ tar -C examples/enable_sshd -cf examples/enable_sshd.tar .
 swdesc_tar examples/enable_sshd.tar extra_os 1
-EXTRA_SCRIPTS="extra_os 1 examples/enable_sshd_genkeys.sh"
+swdesc_script examples/enable_sshd_genkeys.sh extra_os 1
