BREAKING CHANGE: replace EXTRA_EXEC and *CONTAINERS by swdesc_exec and swdesc_*container

--- a/examples/usb_container_nginx.conf
+++ b/examples/usb_container_nginx.conf
@@ -1,6 +1,6 @@
 # generated with the following:
 # $ podman pull docker.io/arm64v8/nginx:alpine
 # $ ./podman_partial_image.sh -R s@docker.io/arm64v8/nginx@docker.io/nginx@g -o examples/nginx_alpine.tar docker.io/arm64v8/nginx:alpine
-USB_CONTAINERS="container_nginx 1 examples/nginx_alpine.tar"
+swdesc_usb_container "examples/nginx_alpine.tar" container_nginx 1
 # $ tar -C examples/nginx_start -cf examples/nginx_start.tar .
 swdesc_tar examples/nginx_start.tar extra_os 1
