--- a/examples/kernel_update_apk.conf
+++ b/examples/kernel_update_apk.conf
@@ -2,8 +2,8 @@
 # Careful that it will try to resolve any missing dependency through internet
 # if package cannot be installed directly.
 # Network will not be used if dependencies are satisfied.
-EXTRA_EXECS="extra_os 1 examples/linux-at-5.10.9-r3.apk -- apk add --root /target"
+swdesc_exec "examples/linux-at-5.10.9-r3.apk" "apk add --root /target" kernel 5.10.9-r3
 
 # it's also possible to have a whole update via internet
 #[ -e examples/apk-add ] || : > examples/apk-add
-#EXTRA_EXECS="extra_os 1 examples/apk-add -- apk update --root /target && apk add --root /target linux-at #"
+#swdesc_exec "examples/apk-add" "apk add --root /target linux-at" kernel 5.10.9-r3
