--- a/tests/spaces.conf
+++ b/tests/spaces.conf
@@ -2,8 +2,8 @@ DEBUG_SWDESC="# ATMARK_SKIP_SCRIPTS"
 touch tests/zoo/test\ space
 tar -C tests/zoo -cf tests/zoo/test\ space.tar test\ space
 swdesc_tar "tests/zoo/test space.tar" extra_os 1 /tmp
-PULL_CONTAINERS="spaces 1 docker.io/tag with spaces"
-EMBED_CONTAINERS="spaces 1 tests/zoo/test space.tar"
-USB_CONTAINERS="spaces 1 tests/zoo/test space.tar"
+swdesc_pull_container "docker.io/tag with spaces" spaces 1
+swdesc_embed_container "tests/zoo/test space.tar" spaces 1
+swdesc_usb_container "tests/zoo/test space.tar" spaces 1
 swdesc_script "tests/zoo/test space" spaces 1
-EXTRA_EXECS="spaces 1 tests/zoo/test space -- echo"
+swdesc_exec "tests/zoo/test space" echo spaces 1
