--- a/mkimage.conf
+++ b/mkimage.conf
@@ -19,3 +19,7 @@ PUBKEY=swupdate.pem
 # See documentation for help if you require changing it:
 # https://sbabic.github.io/swupdate/sw-description.html#hardware-compatibility
 HW_COMPAT="yakushima-1.0"
+
+# Description is an informative string describing your update in verbose mode
+# You probably want to override this in your image descriptions
+DESCRIPTION="Atmark firmware image"
