BREAKING CHANGE: change HW_COMPAT to at1.* regex

--- a/mkimage.conf
+++ b/mkimage.conf
@@ -18,7 +18,7 @@ PUBKEY=swupdate.pem
 # you might no longer be able to install atmark updates.
 # See documentation for help if you require changing it:
 # https://sbabic.github.io/swupdate/sw-description.html#hardware-compatibility
-HW_COMPAT="yakushima-1.0"
+HW_COMPAT="#RE:^at1.*$"
 
 # Description is an informative string describing your update in verbose mode
 # You probably want to override this in your image descriptions
