hawkbit docker-compose: add HAWKBIT_HTTP_PORT, add default values

--- a/hawkbit/.env
+++ b/hawkbit/.env
@@ -2,8 +2,11 @@
 # you need to enter the mysql container manually to adjust it.
 MYSQL_PASSWORD=
 MYSQL_ROOT_PASSWORD=
-HAWKBIT_ADMIN_PASSWORD="{noop}Change this password"
-HAWKBIT_DEVICE_PASSWORD="{noop}..."
-HAWKBIT_POLLING_TIME=00:05:00
-HAWKBIT_MAX_FILE_SIZE=1024MB
+HAWKBIT_ADMIN_PASSWORD="{noop}Not a good password"
+HAWKBIT_DEVICE_PASSWORD="{noop}device password"
 
+# Optional settings
+
+#HAWKBIT_POLLING_TIME=00:05:00
+#HAWKBIT_MAX_FILE_SIZE=1024MB
+#HAWKBIT_HTTP_PORT=8080
