--- a/hawkbit/docker-compose.yml
+++ b/hawkbit/docker-compose.yml
@@ -46,14 +46,15 @@ services:
         "hawkbit.server.im.users[1].password": "${HAWKBIT_DEVICE_PASSWORD:?Must set environment variables in .env}",
         "hawkbit.server.im.users[1].permissions": "READ_TARGET_SECURITY_TOKEN,CREATE_TARGET",
         "hawkbit.server.ddi.security.authentication.targettoken.enabled": true,
-        "hawkbit.controller.pollingTime": "${HAWKBIT_POLLING_TIME:?Must set environment variables in .env}",
-        "spring.servlet.multipart.max-file-size": "${HAWKBIT_MAX_FILE_SIZE:?Must set environment variables in .env}",
-        "spring.servlet.multipart.max-request-size": "-1"
+        "hawkbit.controller.pollingTime": "${HAWKBIT_POLLING_TIME:-00:05:00}",
+        "spring.servlet.multipart.max-file-size": "${HAWKBIT_MAX_FILE_SIZE:-1024MB}",
+        "spring.servlet.multipart.max-request-size": "-1",
+        "hawkbit.artifact.url.protocols.download-http.port": "${HAWKBIT_HTTP_PORT:-8080}"
       }'
     restart: always
     volumes:
       - ./hawkbit_artifactrepo:/opt/hawkbit/artifactrepo
     ports:
-      - "8080:8080"
+      - "8080:${HAWKBIT_HTTP_PORT:-8080}"
     labels:
       NAME: "hawkbit"
