hawkbit docker-compose: add nginx sample config

--- a/hawkbit/.env
+++ b/hawkbit/.env
@@ -10,3 +10,4 @@ HAWKBIT_DEVICE_PASSWORD="{noop}device password"
 #HAWKBIT_POLLING_TIME=00:05:00
 #HAWKBIT_MAX_FILE_SIZE=1024MB
 #HAWKBIT_HTTP_PORT=8080
+#HAWKBIT_HTTP_PROTOCOL=http
