--- a/hawkbit/docker-compose.yml
+++ b/hawkbit/docker-compose.yml
@@ -49,7 +49,9 @@ services:
         "hawkbit.controller.pollingTime": "${HAWKBIT_POLLING_TIME:-00:05:00}",
         "spring.servlet.multipart.max-file-size": "${HAWKBIT_MAX_FILE_SIZE:-1024MB}",
         "spring.servlet.multipart.max-request-size": "-1",
-        "hawkbit.artifact.url.protocols.download-http.port": "${HAWKBIT_HTTP_PORT:-8080}"
+        "server.use-forward-headers": true,
+        "hawkbit.artifact.url.protocols.download-http.port": "${HAWKBIT_HTTP_PORT:-8080}",
+        "hawkbit.artifact.url.protocols.download-http.protocol": "{$HAWKBIT_HTTP_PROTOCOL:-http}"
       }'
     restart: always
     volumes:
