hawkbit: fix docker-compose/.env comments
- split HTTP_PORT into LISTEN_PORT (not necessarily equal if running reverse proxy)
- add LISTEN_HOST to listen only to localhost
- add comments to explain what each option does

--- a/hawkbit/.env
+++ b/hawkbit/.env
@@ -7,7 +7,21 @@ HAWKBIT_DEVICE_PASSWORD="{noop}device password"
 
 # Optional settings
 
+# polling time between updates in hh:mm:ss
+# must be between 00:00:30 and 23:59:59
 #HAWKBIT_POLLING_TIME=00:05:00
+
+# maximum file size to upload artifacts,
+# If planning to use bigger updates, increase it
+# (and nginx client_max_body_size if using nginx)
 #HAWKBIT_MAX_FILE_SIZE=1024MB
+
+# port and protocol clients should use to retrieve updates
+# (e.g. set to 443 and https if a reverse proxy has been setup)
 #HAWKBIT_HTTP_PORT=8080
 #HAWKBIT_HTTP_PROTOCOL=http
+
+# port and ip hawkbit will listen to (where reverse proxy needs to redirect)
+# you might want to restrict host to 127.0.0.1 if running a reverse proxy
+#HAWKBIT_LISTEN_PORT=8080
+#HAWKBIT_LISTEN_HOST=0.0.0.0
