hawkbit docker-compose: fix reverse proxy setup
- use server.forward-headers-strategy=NATIVE instead of bogus (old?) server.use-forward-headers=true
- set X-Forwarded-Host and X-Forwarded-Port in nginx config
- remove hawkbit.artifact.url.protocols.download-http.port / hawkbit.artifact.url.protocols.download-http.protocol
  and associated HAWKBIT_HTTP_PORT/HAWKBIT_HTTP_PROTOCOL which are not actually required

--- a/hawkbit/docker-compose.yml
+++ b/hawkbit/docker-compose.yml
@@ -49,9 +49,7 @@ services:
         "hawkbit.controller.pollingTime": "${HAWKBIT_POLLING_TIME:-00:05:00}",
         "spring.servlet.multipart.max-file-size": "${HAWKBIT_MAX_FILE_SIZE:-1024MB}",
         "spring.servlet.multipart.max-request-size": "-1",
-        "server.use-forward-headers": true,
-        "hawkbit.artifact.url.protocols.download-http.port": "${HAWKBIT_HTTP_PORT:-8080}",
-        "hawkbit.artifact.url.protocols.download-http.protocol": "${HAWKBIT_HTTP_PROTOCOL:-http}"
+        "server.forward-headers-strategy": "NATIVE"
       }'
     restart: always
     volumes:
