--- a/hawkbit/nginx_hawkbit.conf
+++ b/hawkbit/nginx_hawkbit.conf
@@ -29,13 +29,15 @@ server {
     client_max_body_size 1G;
 
     location / {
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Host $http_host;
-	    proxy_set_header X-Ssl-Client-Cn $ssl_client_s_dn_cn;
-	    proxy_set_header X-Ssl-Issuer-Hash-1 hawkBit;
-            proxy_pass http://localhost:8080/;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Ssl-Client-Cn $ssl_client_s_dn_cn;
+        proxy_set_header X-Ssl-Issuer-Hash-1 hawkBit;
+        proxy_pass http://localhost:8080/;
     }
 }
 
