hawkbit: add create-update script
Allow creating updates in hawkbit from swu file

--- a/hawkbit/.env
+++ b/hawkbit/.env
@@ -3,7 +3,8 @@
 MYSQL_PASSWORD=
 MYSQL_ROOT_PASSWORD=
 HAWKBIT_ADMIN_PASSWORD="{noop}Not a good password"
-HAWKBIT_DEVICE_PASSWORD="{noop}device password"
+HAWKBIT_DEVICE_PASSWORD="{noop}device password" # (for autoregistration)
+HAWKBIT_MKIMAGE_PASSWORD="{noop}mkimage password" # (for image automatic upload)
 
 # Optional settings
 
@@ -20,3 +21,9 @@ HAWKBIT_DEVICE_PASSWORD="{noop}device password"
 # you might want to restrict host to 127.0.0.1 if running a reverse proxy
 #HAWKBIT_LISTEN_PORT=8080
 #HAWKBIT_LISTEN_HOST=0.0.0.0
+
+
+# If you want mkimage scripts to automatically start rollouts after creating
+# them, you need to add the following two permissions to the list:
+# READ_ROLLOUT,HANDLE_ROLLOUT
+#HAWKBIT_MKIMAGE_PERMISSIONS=READ_REPOSITORY,UPDATE_REPOSITORY,CREATE_REPOSITORY,UPDATE_TARGETS,READ_TARGET,CREATE_ROLLOUT
