--- a/hawkbit/docker-compose.yml
+++ b/hawkbit/docker-compose.yml
@@ -45,6 +45,9 @@ services:
         "hawkbit.server.im.users[1].username": "device",
         "hawkbit.server.im.users[1].password": "${HAWKBIT_DEVICE_PASSWORD:?Must set environment variables in .env}",
         "hawkbit.server.im.users[1].permissions": "READ_TARGET_SECURITY_TOKEN,CREATE_TARGET",
+        "hawkbit.server.im.users[2].username": "mkimage",
+        "hawkbit.server.im.users[2].password": "${HAWKBIT_MKIMAGE_PASSWORD:?Must set environment variables in .env}",
+        "hawkbit.server.im.users[2].permissions": "${HAWKBIT_MKIMAGE_PERMISSIONS:-READ_REPOSITORY,UPDATE_REPOSITORY,CREATE_REPOSITORY,UPDATE_TARGETS,READ_TARGET,CREATE_ROLLOUT}",
         "hawkbit.server.ddi.security.authentication.targettoken.enabled": true,
         "hawkbit.controller.pollingTime": "${HAWKBIT_POLLING_TIME:-00:05:00}",
         "spring.servlet.multipart.max-file-size": "${HAWKBIT_MAX_FILE_SIZE:-1024MB}",
