--- a/hawkbit/.env
+++ b/hawkbit/.env
@@ -22,8 +22,6 @@ HAWKBIT_MKIMAGE_PASSWORD="{noop}mkimage password" # (for image automatic upload)
 #HAWKBIT_LISTEN_PORT=8080
 #HAWKBIT_LISTEN_HOST=0.0.0.0
 
-
 # If you want mkimage scripts to automatically start rollouts after creating
-# them, you need to add the following two permissions to the list:
-# READ_ROLLOUT,HANDLE_ROLLOUT
-#HAWKBIT_MKIMAGE_PERMISSIONS=READ_REPOSITORY,UPDATE_REPOSITORY,CREATE_REPOSITORY,UPDATE_TARGETS,READ_TARGET,CREATE_ROLLOUT
+# them, you need to add HANDLE_ROLLOUT to the list
+#HAWKBIT_MKIMAGE_PERMISSIONS=READ_REPOSITORY,UPDATE_REPOSITORY,CREATE_REPOSITORY,UPDATE_TARGETS,READ_TARGET,CREATE_ROLLOUT,READ_ROLLOUT
