init.sh: add new script to make initial setup more straightforward
- generates keys if required
- walks through initial_setup.desc configurations

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /swupdate.aes-key
 /mkimage.conf
 /mkimage.conf.autosave*
+/initial_setup.desc
 # dot files are usually swu build dirs: ignore all except a few patterns
 .*
 !.gitignore
