gitignore: ignore extra certs/keys
--genkey allows creating swupdate-2.pem and similar, ignore them
all

Change-Id: If657743b5f6eb1a63572140d7989d341c3683d98

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-/swupdate.key
-/swupdate.pem
-/swupdate.aes-key
+/swupdate*.key
+/swupdate*.pem
+/swupdate*.aes-key
 /mkswu.conf
 /mkswu.conf.autosave*
 /mkimage.conf
