debian: add missing Build-Depends
Change-Id: I2750a1c5ce9870ad5e49f40c1a16c4d0a3aa3af0

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Homepage: https://github.com/atmark-techno/swupdate-mkimage
 Standards-Version: 3.9.2
 Maintainer: Dominique Martinet <dominique.martinet@atmark-techno.com>
-Build-Depends: debhelper-compat (= 12)
+Build-Depends: debhelper-compat (= 12), gettext, pandoc
 
 Package: mkswu
 Depends:
