tests: also test swdesc_boot_enc
Change-Id: Ic740a4ceca23117de79ed012f489c1bdb762ad60

--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -8,3 +8,6 @@
 /apk-add
 # encrypted_rootfs_linux_update
 /Image.signed
+# encrypted_imxboot_update
+/imx-boot_armadillo_x2.enc
+/armadillo_x2.dek_offsets
